--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,5 @@
 {
+  "plugins": ["prettier-plugin-tailwindcss", "prettier-plugin-organize-imports"],
   "printWidth": 120,
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "organizeImportsSkipDestructiveCodeActions": true
 }
