--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "dev:server": "node --watch ./src/server/index.js"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
@@ -38,6 +39,7 @@
     "eslint-plugin-testing-library": "^7.6.0",
     "globals": "^16.2.0",
     "jsdom": "^26.1.0",
+    "msw": "^2.10.4",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.13",
